--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,7 +22,7 @@
   <link href="/css/style.css" rel="stylesheet">
   <link href="/color/default.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+ <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
   <!-- =======================================================
     Theme Name: Valera
     Theme URL: https://bootstrapmade.com/ -free-bootstrap-theme/
@@ -94,7 +94,7 @@
           <div class="col-md-2 mob-logo">
             <div class="row">
               <div class="site-logo">
-                <a href="landing.ejs"><img src="img/elitelogo.png" alt="" /></a>
+                    <a class="navbar-brand" style="font-family: 'Great Vibes', cursive; font-size:30px; font-weight:900; color:black;" href="/"><span style="color:#F08080;">Elite </span><span>Consorts</span></a>
               </div>
             </div>
           </div>
@@ -363,16 +363,18 @@
         </div>
       </div>
     </div>
+      
   </section>
-
+  
 
   <!-- Section: contact -->
 
-    <% include partials/footer %>
+
   <!-- /Section: contact -->
 
   <!-- google map -->
   <div id="map-btn1-div">
+    <% include partials/footer %>
     <a id="map-btn1" class="gmap-btn close-map-button btn-show" href="#map">
       Click here to open the map
     </a>
