--- a/views/newprem.ejs
+++ b/views/newprem.ejs
@@ -58,11 +58,10 @@
       </div>
        <div class="ui input">
             <select class="ui form-group dropdown" name="sexuality" placeholder="sexuality" type="text" required>
-              <option value="default">Normal</option>
-              <option value="Bi">Bi</option>
-              <option value="Trans">Trans</option>
-             <option value="Post ">Post</option>
-               <option value="Ops">Ops</option>
+                 <option value="default">Sexuality</option>
+              <option value="Bi">Straight</option>
+              <option value="Trans">Gay</option>
+             <option value="Post ">Bisexual</option>
             </select>
      </div>
     
@@ -71,7 +70,8 @@
               <option value="default">Gender</option>
               <option value="Male">Male</option>
               <option value="Female">Female</option>
-               <option value="Transgender">Transgender</option>
+               <option value="Transgender">Post-Op Trans</option>
+               <option value="Transgender">Pre-Op Trans</option>
             </select>
      </div>
    
@@ -131,4 +131,4 @@
 <a class="ui  orange button" style="margin:10px 0" href="/userprofiles/new"> Go Back</a>
 </div>
 </div>
-<% include partials/footer %>
+<% include partials/footer1 %>
