--- a/views/newreg.ejs
+++ b/views/newreg.ejs
@@ -10,13 +10,14 @@
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
           <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="/stylesheet/signup.css">
+       <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
     
     </head>
     <body style="  height: 100%;
     overflow: hidden;
     padding-top: 100px;  overflow: hidden;">
        
-   <nav class="navbar navbar-default navbar-fixed-top" style="background-color:	#F0E68C;">
+   <nav class="navbar navbar-default navbar-fixed-top" style="background-color:	#FFFFFF;">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -26,7 +27,7 @@
            
           
        
-		<h1 class="brand brand-name navbar-left"><div class"navbar-left"><a href="/" style="color:black">Elite Consorts</a></h1>
+		<h1 class="brand brand-name navbar-left"><div class"navbar-left"><a href="/" style="font-family: 'Great Vibes', cursive;color:black "><span style="color:#F08080;">Elite </span><span>Consorts</span></a></h1>
         </div>
         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -59,11 +60,11 @@
       </div>
        <div class="ui input">
             <select class="ui form-group dropdown" name="sexuality" placeholder="sexuality" type="text" required>
-               <option value="default">Normal</option>
-              <option value="Bi">Bi</option>
-              <option value="Trans">Trans</option>
-             <option value="Post ">Post</option>
-               <option value="Ops">Ops</option>
+               <option value="default">Sexuality</option>
+              <option value="Bi">Straight</option>
+              <option value="Trans">Gay</option>
+             <option value="Post ">Bisexual</option>
+              
            
             </select>
      </div>
@@ -73,7 +74,8 @@
               <option value="default">Gender</option>
               <option value="Male">Male</option>
               <option value="Female">Female</option>
-               <option value="Transgender">Transgender</option>
+                <option value="Transgender">Post-Op Trans</option>
+               <option value="Transgender">Pre-Op Trans</option>
             </select>
      </div>
    
@@ -130,4 +132,4 @@
 <a class="ui  orange button" style="margin:10px 0" href="/userprofiles/new"> Go Back</a>
 </div>
 </div>
-<% include partials/footer %>
+<% include partials/footer1 %>
