--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
           <link href="https://fonts.googleapis.com/css?family=Lato|Questrial&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/stylesheet/landing.css">
+         <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
     
     </head>
 <body style="font-family: 'Lato', sans-serif;">
@@ -17,7 +18,9 @@
     
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Elite Consorts</a>
+            <a class="navbar-brand" style="  padding: 0 15px;
+  height: 80px;
+  line-height: 80px; font-family: 'Great Vibes', cursive; font-size:30px; font-weight:900; color:black;" href="/"><span style="color:#F08080;">Elite </span><span>Consorts</span></a>
         </div>
    
     <div class="collapse navbar-collapse">
