--- a/views/show.ejs
+++ b/views/show.ejs
@@ -63,7 +63,7 @@
              
          </div>
 </div>
-    <% include partials/footer %>
+    
 <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 
         
@@ -82,5 +82,7 @@ window.onload = function () {
 setTimeout(function(){count = 1;},200);
 
 </script>
+<% include partials/footer1 %>
 </body>
+
 </html>
