--- a/views/tog.ejs
+++ b/views/tog.ejs
@@ -95,7 +95,7 @@ A....
 
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="assetst/js/bootstrap.min.js"></script>
-
+<% include partials/footer %>
 </body>
 
 </html>
