--- a/views/freetour.ejs
+++ b/views/freetour.ejs
@@ -9,15 +9,19 @@
           <link href="https://fonts.googleapis.com/css?family=Lato|Questrial&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!--<link rel="stylesheet" type="text/css" href="/stylesheet/landing.css">-->
-    
+             <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
+
     </head>
 <body style="font-family: 'Lato', sans-serif;">
     
-  <nav class="navbar navbar-default navbar-fixed-top" style=" background-color:	#F0E68C;   ">
+  <nav class="navbar navbar-default navbar-fixed-top" style=" background-color:	#FFFFFF;  min-height: 80px;  ">
     
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Elite Consorts</a>
+              <a class="navbar-brand" style="font-family: 'Great Vibes', cursive; 
+              padding: 0 15px;
+  height: 80px;
+  line-height: 80px;font-size:30px; font-weight:900; color:black;" href="/"><span style="color:#F08080;">Elite </span><span>Consorts</span></a>
         </div>
    
     <div class="collapse navbar-collapse">
@@ -46,7 +50,8 @@
               <option value="default">Gender</option>
               <option value="Male">Male</option>
               <option value="Female">Female</option>
-                      <option value="Transgender">Transgender</option>
+            <option value="Transgender">Post-Op Trans</option>
+               <option value="Transgender">Pre-Op Trans</option>
             </select>
      
   
@@ -133,7 +138,7 @@
  }
 
 });
-if(flag==1){ content  =content+ '<div class="five wide column"><div "ui card container"> <div class="ui medium fluid rounded image">  <svg width="150" height="150"> <image xlink:href="/uploads/'+rows[0].image[0]+'" width="100%" height="100%"></image></svg></div>'+
+if(flag==1){ content  =content+ '<div class="four wide column"><div "ui card container"> <div class="ui medium fluid rounded image">  <svg width="150" height="150"> <image xlink:href="/uploads/'+rows[0].image[0]+'" width="100%" height="100%"></image></svg></div>'+
 '    <div class="ui huge header"> Name: <span>'+rows[i].name +'</span> </div>'+
 '    <div class="ui huge header"> Age: <span>'+rows[i].age +'</span> </div>'+
 '    <div class="ui huge header"> Gender: <span>'+rows[i].gender +'</span> </div>'+
