--- a/views/ms.ejs
+++ b/views/ms.ejs
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="assetsm/css/slippry.css">
   <link href="assetsm/css/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="assetsm/color/default.css">
+            <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
   <!-- =======================================================
     Theme Name: Groovin
     Theme URL: https://bootstrapmade.com/groovin-free-bootstrap-theme/
@@ -26,7 +27,7 @@
 <body>
   <header>
 
-    <div id="navigation" class="navbar navbar-inverse navbar-fixed-top default" role="navigation">
+    <div id="navigation" class="navbar navbar-inverse navbar-fixed-top default" style="background-color:white; color:black;"role="navigation">
       <div class="container">
 
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -36,13 +37,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">EliteConsorts</a>
+         <a class="navbar-brand " style="  padding: 0 15px;
+  height: 80px;
+  line-height: 80px; font-family: 'Great Vibes', cursive; font-size:30px; font-weight:900; color:black;" href="/"><span style="color:#F08080;">Elite </span><span>Consorts</span></a>
         </div>
 
         <div class="navigation">
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <div class="collapse navbar-collapse" style="color:black;" id="bs-example-navbar-collapse-1">
             <nav>
-              <ul class="nav navbar-nav navbar-right">
+              <ul class="nav navbar-nav navbar-right" >
                 <li class="current"><a href="/">Home</a></li>
                 <li><a href="/users/login">LogIn</a></li>
                 <li><a href="/userprofiles/new">SignUp</a></li>
