--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,10 +10,11 @@
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
           <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="/stylesheet/signup.css">
+         <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
     
     </head>
        
-   <nav class="navbar navbar-default navbar-fixed-top" style="background-color:	#F0E68C;">
+   <nav class="navbar navbar-default navbar-fixed-top" style="background-color:	#FFFFFF;">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -23,7 +24,7 @@
            
           
        
-		<h1 class="brand brand-name navbar-left"><div class"navbar-left"><a href="/" style="color:black">Elite Consorts</a></h1>
+		<h1 class="brand brand-name navbar-left"><div class"navbar-left"><a href="/" style="font-family: 'Great Vibes', cursive;color:black "><span style="color:#F08080;">Elite </span><span>Consorts</span></a></h1>
         </div>
         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -50,8 +51,8 @@
     <a  href="/newreg" class="ui container inverted violet button"style="margin:auto;" >
         Become a Regular Member
     </a>
-    
+   
     
 </div> 
-    <% include partials/footer %>
-
+    
+ <% include partials/footer1 %>
