--- a/views/partials/footer1.ejs
+++ b/views/partials/footer1.ejs
@@ -1,7 +1,8 @@
 
-<div class="container" style="background-color: #333;
+<div class="navbar-bottom" style="background-color: #333;
   overflow: hidden;
  
+  position: fixed;
   text-align:center;
   bottom: 0;
   width: 100%;
