--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -7,25 +7,34 @@
      <!-- Latest compiled and minified CSS -->
        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
           <link href="https://fonts.googleapis.com/css?family=Lato|Questrial&display=swap" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!--<link rel="stylesheet" type="text/css" href="/stylesheet/landing.css">-->
       
     </head>
 <body style="font-family: 'Lato', sans-serif; color:black;">
     <div >
-    <nav class="navbar navbar-default navbar-fixed-top" style=" background-color:#FFFFFF;   ">
+    <nav class="navbar navbar-default navbar-fixed-top" style="  min-height: 80px; background-color:#FFFFFF; height=200px;  ">
     
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" style="font-size:20px; font-weight:900; color:black;" href="/">Elite Consorts</a>
+            <a class="navbar-brand " style="  padding: 0 15px;
+  height: 80px;
+  line-height: 80px; font-family: 'Great Vibes', cursive; font-size:30px; font-weight:900; color:black;" href="/"><span style="color:#F08080;">Elite </span><span>Consorts</span></a>
         </div>
    
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" >
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="" style="font-size:20px; font-weight:900; color:black;">
+            <li><a href="" style="font-size:20px; font-weight:900; color:black; 
+            padding: 0 15px;
+  height: 80px;
+  line-height: 80px;">
                LoggedIn
             </a></li>
-            <li><a href="/logout" style="font-size:20px; font-weight:900; color:black;">
+            <li><a href="/logout" style="
+            padding: 0 15px;
+  height: 80px;
+  line-height: 80px;font-size:20px; font-weight:900; color:black;">
               LogOut
             </a></li>
         </ul>
