--- a/views/payment2.ejs
+++ b/views/payment2.ejs
@@ -11,7 +11,7 @@
   <div id="dropin-container"></div>
   <button id="submit-button">Submit payment</button>
 </div>
-    <% include partials/footer %>
+
 <script>
   var button = document.querySelector('#submit-button');
 
@@ -53,3 +53,4 @@
     });
   });
 </script>
+<% include partials/footer1 %>
