--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
 <div class="container" style="background-color: #333;
   overflow: hidden;
- 
+ margin-top: 25px;
   text-align:center;
   bottom: 0;
   width: 100%;
