--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -25,11 +25,11 @@
    
     <div class="collapse navbar-collapse" >
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="" style="font-size:20px; font-weight:900; color:black; 
+            <li><a href="/cuser" style="font-size:20px; font-weight:900; color:black; 
             padding: 0 15px;
   height: 80px;
   line-height: 80px;">
-               LoggedIn
+               Profile
             </a></li>
             <li><a href="/logout" style="
             padding: 0 15px;
